Dialog will appear if the user want to load or create a new batch. User will now have the choice of backing up the changes or not (was always backing up before)

--- a/NAPS2.Core/Lang/Resources/MiscResources.fr.resx
+++ b/NAPS2.Core/Lang/Resources/MiscResources.fr.resx
@@ -522,4 +522,7 @@
   <data name="Selection" xml:space="preserve">
     <value>Items sélectionnés: </value>
   </data>
+  <data name="UnsavedChangesAction" xml:space="preserve">
+    <value>Voulez-vous garder les changements du lot actuel?</value>
+  </data>
 </root>
